--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,6 @@ serde = {version = "1.0.187", features = ["derive"]}
 serde_json = "1.0.107"
 uuid = { version = "1.4.1", features = ["v4", "serde"] }
 env_logger = "0.10"
+rusqlite = {version = "0.29", features = ["bundled"]}
+argon2 = "0.5.2"
+actix-session = {version = "0.8.0", features = ["cookie-session"]}
