--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,4 +20,6 @@ actix-cors = "0.6.4"
 log = "0.4"
 log4rs = "1.2"
 chrono = "0.4"
-actix-interop = "0.3"
+actix-interop = "0.4"
+dotenvy = "0.15.7"
+
